# brainflow

./: .clang-format  .clang-format-ignore  .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  404.html  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Gemfile  LICENSE  NOTES-MUSE.txt  README.md  _config.yml  appveyor.yml  brainflow_boards.json  callbacks.cpp  citations.md  cmake_build.cmd  cmake_build.sh  cmake_build_emu.sh  conanfile.py  conduct.md  contact.md  features.html  features.md  gallery.html  ganglion.cpp  getting_started.md  helpers.cpp  index.html  lgtm.yml  main.cpp  mne_scan.md  paid_software_development.md  partners_and_sponsors.md  (+8 more)
GanglionBLEAPI/Mock/: CMakeLists.txt  GanglionNativeMock.cpp
brainflow-rust/: Cargo.toml
brainflow-rust/crates/brainflow/: Cargo.toml
brainflow-rust/crates/brainflow-boards/: Cargo.toml
brainflow-rust/crates/brainflow-boards/src/: board.rs  controller.rs  lib.rs  playback.rs  preset.rs  streaming.rs  synthetic.rs
brainflow-rust/crates/brainflow-boards/src/ant_neuro/: mod.rs
brainflow-rust/crates/brainflow-boards/src/brainbit/: mod.rs
brainflow-rust/crates/brainflow-boards/src/emotibit/: mod.rs
brainflow-rust/crates/brainflow-boards/src/explore/: mod.rs
brainflow-rust/crates/brainflow-boards/src/galea/: mod.rs
brainflow-rust/crates/brainflow-boards/src/ganglion/: mod.rs
brainflow-rust/crates/brainflow-boards/src/gforce/: mod.rs
brainflow-rust/crates/brainflow-boards/src/misc/: mod.rs
brainflow-rust/crates/brainflow-boards/src/muse/: mod.rs
brainflow-rust/crates/brainflow-boards/src/neurosity/: mod.rs
brainflow-rust/crates/brainflow-boards/src/openbci/: cyton.rs  freeeeg.rs  mod.rs  packet.rs  wifi.rs
brainflow-rust/crates/brainflow-ffi/: Cargo.toml
brainflow-rust/crates/brainflow-ffi/include/: brainflow.h
brainflow-rust/crates/brainflow-ffi/src/: lib.rs
brainflow-rust/crates/brainflow-fft/: Cargo.toml
brainflow-rust/crates/brainflow-fft/src/: lib.rs  psd.rs  window.rs
brainflow-rust/crates/brainflow-filter/: Cargo.toml
brainflow-rust/crates/brainflow-filter/src/: biquad.rs  design.rs  iir.rs  lib.rs
brainflow-rust/crates/brainflow-io/: Cargo.toml
brainflow-rust/crates/brainflow-io/src/: ble.rs  buffer.rs  http.rs  lib.rs  serial.rs  socket.rs
brainflow-rust/crates/brainflow-math/: Cargo.toml
brainflow-rust/crates/brainflow-math/src/: complex.rs  ica.rs  lib.rs  matrix.rs  stats.rs  vector.rs
brainflow-rust/crates/brainflow-ml/: Cargo.toml
brainflow-rust/crates/brainflow-ml/src/: classifier.rs  lib.rs  mindfulness.rs
brainflow-rust/crates/brainflow-sys/: Cargo.toml
brainflow-rust/crates/brainflow-sys/src/: error.rs  lib.rs  sync.rs  time.rs
brainflow-rust/crates/brainflow-wavelet/: Cargo.toml
brainflow-rust/crates/brainflow-wavelet/src/: coefficients.rs  denoise.rs  lib.rs  transform.rs  wavelets.rs
brainflow-rust/crates/brainflow/src/: board_shim.rs  data_filter.rs  lib.rs  ml_model.rs
rust-package/brainflow/: Cargo.toml  README.md  build.rs
rust-package/brainflow-sys/: Cargo.toml  README.md  build.rs
rust-package/brainflow-sys/src/: board_controller.rs  data_handler.rs  lib.rs  ml_model.rs
rust-package/brainflow/examples/: band_power.rs  cyton.rs  denoising.rs  downsampling.rs  eeg_metrics.rs  get_data.rs  get_data_from_a_board.rs  markers.rs  read-write-file.rs  read_write_file.rs  signal_filtering.rs  transforms.rs
rust-package/brainflow/src/: agg_operations.rs  board_id.rs  board_ids.rs  board_shim.rs  brainflow_classifiers.rs  brainflow_exit_codes.rs  brainflow_input_params.rs  brainflow_model_params.rs  data_filter.rs  detrend_operations.rs  error.rs  ffi.rs  filter_types.rs  ip_protocol_type.rs  lib.rs  log_levels.rs  ml_model.rs  noise_types.rs  window_functions.rs
rust-package/brainflow/src/ffi/: board_controller.rs  constants.rs  data_handler.rs  ml_model.rs
rust-package/brainflow/src/ml_model/: brainflow_model_param.rs
rust_package/brainflow/: Cargo.toml
rust_package/brainflow/examples/: band_power.rs  denoising.rs  downsampling.rs  eeg_metrics.rs  get_data.rs  ica.rs  markers.rs  read_write_file.rs  signal_filtering.rs  transforms.rs
rust_package/brainflow/src/: board_shim.rs  brainflow_input_params.rs  brainflow_model_params.rs  data_filter.rs  ffi.rs  lib.rs  ml_model.rs  test_helpers.rs
rust_package/brainflow/src/ffi/: board_controller.rs  constants.rs  data_handler.rs  ml_module.rs
tests/cpp/: CMakeLists.txt  build.cmake  hello_test.cc  run.cmd  run.sh
tests/cpp/data_handler/: CMakeLists.txt
tests/cpp/data_handler/src/: signal_filtering.cpp  signal_filtering_c_api.cpp
tests/cpp/demos/get_data_demo/src/: get_data_twice.cpp
tests/cpp/demos/ml_demo/src/: eeg_metrics.cpp  eeg_metrics_ci.cpp
tests/cpp/demos/signal_processing_demo/src/: band_power.cpp  signal_filtering.cpp  transforms.cpp  windowing.cpp
tests/cpp/get_data_demo/: CMakeLists.txt
tests/cpp/get_data_demo/src/: brainflow_config_board.cpp  brainflow_file_stream.cpp  brainflow_get_data.cpp  brainflow_get_data_twice.cpp  get_data_twice.cpp  markers.cpp
tests/cpp/ml_demo/: CMakeLists.txt
tests/cpp/ml_demo/src/: eeg_metrics.cpp  eeg_metrics_ci.cpp  eeg_metrics_full.cpp
tests/cpp/ml_demo/src/dyn_lib_test/: dyn_lib_test.cpp  dyn_lib_test.h
tests/cpp/signal_processing_demo/: CMakeLists.txt
tests/cpp/signal_processing_demo/src/: band_power.cpp  band_power_all.cpp  csp.cpp  denoising.cpp  downsampling.cpp  perf_test.cpp  serialization.cpp  signal_filtering.cpp  transforms.cpp  windowing.cpp
tests/cpp/src/: brainflow_get_data.cpp  data_handler.cpp  data_handler.h
tests/rust/: .gitignore  Cargo.toml
tests/rust/src/band_power/: main.rs
tests/rust/src/brainflow_get_data/: main.rs
tests/rust/src/denoising/: main.rs
tests/rust/src/downsampling/: main.rs
tests/rust/src/markers/: main.rs
tests/rust/src/signal_filtering/: main.rs
tests/rust/src/transforms/: main.rs
tests/rust/tests/: band_power.rs  common.rs  denoising.rs  downsampling.rs  get_data.rs  markers.rs  signal_filtering.rs  transforms.rs
(+1571 files in other folders)
